# hAIntly-profile-service

./: .dockerignore  .env.example  .flake8  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: check_and_deploy.yml
.helm/: Chart.yaml  values.yaml
.helm/templates/: profile-service-deployment.yml  profile-service-migration-job.yaml  profile-service-service.yml
scripts/: check-format-excludes.sh
src/: alembic.ini  main.py  settings.py
src/api/: __init__.py  hh_accounts.py
src/core/entities/: __init__.py  base.py  hh_account.py
src/core/exceptions/: __init__.py  base.py
src/core/protocols/: __init__.py  hh.py  repositories.py
src/core/schemas/: __init__.py  hh.py
src/core/services/: __init__.py  hh_accounts.py
src/depends/: services.py
src/infrastructure/: __init__.py  crypto.py  hh.py
src/migration/: env.py
src/migration/versions/: 20260710_0001_initial.py  20260712_0002_hh_accounts.py
src/models/: __init__.py  hh_accounts.py
src/repositories/: __init__.py  hh_account_repository.py
src/utils/: configure_sentry.py  database.py
tests/: conftest.py  mock_hh_app.py
tests/api/: test_health.py  test_hh_accounts.py
tests/unit/: test_crypto.py  test_hh_model_migration.py  test_hh_service.py  test_hh_token_service.py  test_hh_transport.py
